infra/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 'brandonjroberts/shinigami-backend:v0.0.1'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
